--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -158,6 +158,18 @@ est_date3 <- dmy(01042023)
               "and the PDS service in Shetland has resumed.*"), 
       TRUE ~ paste0(""))
   
+   # Data quality notes - West Dunbartonshire
+  wd_date <- dmy(01042024)
+
+  wd_text <-  
+    case_when(hb == "NHS Greater Glasgow & Clyde" & sel_fy == extract_fin_year(wd_date) ~
+      paste0(" ",
+             "**Please note:** ",
+             "*Due to local IT system issues West Dunbartonshire ",
+             "were not able to provide some records for 2024/25. ",
+             "PHS has been informed that this issue will ",
+             "be rectified in future submissions.*"), TRUE ~ paste0(""))
+  
 
 ```
 
@@ -231,6 +243,8 @@ Row
 `r shetland_text`
 
 `r orkney_text`
+
+`r wd_text`
 
 Row `r if(complete_year == FALSE)"{.hidden}"` 
 ----------------------------------------------------------------------
